--- a/create-server1/project-backend/package.json
+++ b/create-server1/project-backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index",
@@ -12,7 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pino-http": "^10.2.0"
+  },
+  "devDependencies": {
+    "pino-pretty": "^11.2.1"
   }
 }
